--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="no_headline">No Headline</string>
+    <string name="feed_unavailable">Feed unavailable</string>
+    <string name="empty">Empty</string>
 </resources>
